<resources>
    <string name="app_name">Prototype</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="or">-----------or-----------</string>
    <string name="first_name">First Name</string>
    <string name="signup">SignUp</string>
    <string name="chapter">Chapter</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_id">Email ID</string>
    <string name="dob">DOB</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="last_name">Last Name</string>
    <string name="forgot_password_layout">FORGOT PASSWORD LAYOUT</string>
    <string-array name="states">
        <item>Choose a State</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Tamil Nadu</item>
    </string-array>
    <string-array name="karnataka">
        <item>Choose a City</item>
        <item>Bangalore</item>
        <item>Mangalore</item>
        <item>Hubli</item>
    </string-array>
    <string-array name="kerala">
        <item>Choose a City</item>
        <item>Kochi</item>
        <item>Trissur</item>
        <item>Trivandrum</item>
    </string-array>
    <string-array name="tamilnadu">
        <item>Choose a City</item>
        <item>Hosur</item>
        <item>Krishnagiri</item>
        <item>Salem</item>
    </string-array>
    <string-array name="valid">
        <item>Choose a VALID option</item>
    </string-array>
    <string-array name="chapter">
        <item>Sample Text 1</item>
        <item>Sample Text 2</item>
        <item>Sample Text 3</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
